@@ -1,0 +1,62 @@
+language: cpp
+jobs:
+  include:
+   - name: "Ubuntu 18.04"
+     os: linux
+     dist: bionic
+     compiler: gcc
+     before_install: 
+       - sudo apt-get -q update || true
+       - sudo apt-get install -y libopencv-dev libgtk2.0
+       - wget https://github.com/ENSTABretagneRobotics/OSUtils/archive/master.zip && unzip -q -o master.zip && mv -f OSUtils-master ../OSUtils && rm -Rf master.zip
+       - wget https://github.com/ENSTABretagneRobotics/Extensions/archive/master.zip && unzip -q -o master.zip && mv -f Extensions-master ../Extensions && rm -Rf master.zip
+     script: 
+       - cmake . && cmake --build .
+ 
+   - name: "Mac OS"
+     os: osx
+     osx_image: xcode10.1
+     before_install: 
+       - brew install opencv@2
+       - brew link --force opencv@2
+       - wget https://github.com/ENSTABretagneRobotics/OSUtils/archive/master.zip && unzip -q -o master.zip && mv -f OSUtils-master ../OSUtils && rm -Rf master.zip
+       - wget https://github.com/ENSTABretagneRobotics/Extensions/archive/master.zip && unzip -q -o master.zip && mv -f Extensions-master ../Extensions && rm -Rf master.zip
+     script: 
+       - cmake . && cmake --build . 
+
+   - name: "Windows Visual Studio 2017 x64"
+     os: windows
+     before_install: 
+       - choco install -y opencv --version=3.4.8 --package-parameters '/Environment:C:\tools\opencv\build'
+       - wget https://github.com/ENSTABretagneRobotics/OSUtils/archive/master.zip && unzip -q -o master.zip && mv -f OSUtils-master ../OSUtils && rm -Rf master.zip
+       - wget https://github.com/ENSTABretagneRobotics/Extensions/archive/master.zip && unzip -q -o master.zip && mv -f Extensions-master ../Extensions && rm -Rf master.zip
+     script: 
+       - cmd //c "refreshenv.cmd & cmake -G "Visual Studio 15" -A x64 -D OpenCV_ARCH=x64 -D OpenCV_RUNTIME=vc15 . & cmake --build . --config Release"
+
+   - name: "Windows MinGW 8.1.0 x64"
+     os: windows
+     compiler: gcc
+     env:
+       - OPENCV_DIR=/c/OpenCV3.2.0
+       - PATH=/c/OpenCV3.2.0/x64/mingw/bin:$PATH
+     before_install: 
+       - choco install -y make
+       - wget http://www.ensta-bretagne.fr/lebars/Share/OpenCV3.2.0_mini.zip --no-check-certificate -nv
+       - cmd //c "7z x OpenCV3.2.0_mini.zip -o"%SystemDrive%" -y"
+       - wget https://github.com/ENSTABretagneRobotics/OSUtils/archive/master.zip && unzip -q -o master.zip && mv -f OSUtils-master ../OSUtils && rm -Rf master.zip
+       - wget https://github.com/ENSTABretagneRobotics/Extensions/archive/master.zip && unzip -q -o master.zip && mv -f Extensions-master ../Extensions && rm -Rf master.zip
+     script: 
+       - cmake -G "MSYS Makefiles" . && cmake --build .
+       #- cmake -G "MSYS Makefiles" -D OpenCV_ARCH=x64 -D OpenCV_RUNTIME=mingw . && cmake --build .
+
+   - name: "Ubuntu 12.04"
+     os: linux
+     dist: precise
+     compiler: gcc
+     before_install: 
+       - sudo apt-get -q update || true
+       - sudo apt-get install -y libopencv-dev libgtk2.0
+       - wget https://github.com/ENSTABretagneRobotics/OSUtils/archive/master.zip && unzip -q -o master.zip && mv -f OSUtils-master ../OSUtils && rm -Rf master.zip
+       - wget https://github.com/ENSTABretagneRobotics/Extensions/archive/master.zip && unzip -q -o master.zip && mv -f Extensions-master ../Extensions && rm -Rf master.zip
+     script: 
+       - cmake . && cmake --build .
