@@ -5,16 +5,19 @@ project(RemoteWebcamMultiSrv)
 
 find_package(OpenCV)
 include_directories(${OpenCV_INCLUDE_DIRS})
-option(USE_OPENCV_HIGHGUI_CPP_API "USE_OPENCV_HIGHGUI_CPP_API" ON)
+option(USE_OPENCV_HIGHGUI_CPP_API "USE_OPENCV_HIGHGUI_CPP_API" OFF)
 if(USE_OPENCV_HIGHGUI_CPP_API)
 	add_definitions(-D USE_OPENCV_HIGHGUI_CPP_API)
 endif()
 
 include_directories("${PROJECT_SOURCE_DIR}/../OSUtils")
 include_directories("${PROJECT_SOURCE_DIR}/../Extensions/Img")
+include_directories("${PROJECT_SOURCE_DIR}/../Extensions/Net")
 
 add_executable(RemoteWebcamCli RemoteWebcamCli/Main.c RemoteWebcamCli/Globals.c ../OSUtils/OSTime.c ../OSUtils/OSNet.c ../OSUtils/OSMisc.c ../OSUtils/OSCore.c)
 add_executable(RemoteWebcamMultiSrv RemoteWebcamMultiSrv/Main.cpp RemoteWebcamMultiSrv/Globals.cpp ../OSUtils/OSTimer.c ../OSUtils/OSTime.c ../OSUtils/OSThread.c ../OSUtils/OSNet.c ../OSUtils/OSMisc.c ../OSUtils/OSEv.c ../OSUtils/OSCriticalSection.c ../OSUtils/OSCore.c)
+
+set_source_files_properties(RemoteWebcamCli/Main.c RemoteWebcamCli/Globals.c PROPERTIES LANGUAGE CXX) # Needed for recent versions of OpenCV (> 3.2.0?)...
 
 if(OpenCV_VERSION VERSION_LESS "4")
 else()
@@ -37,13 +40,21 @@ if(WIN32)
 	endif()
 else()
 	if(APPLE)
+		add_definitions(-D USE_OLD_CHRONO -D USE_OLD_TIMER)
 		target_link_libraries(RemoteWebcamCli pthread m)
 		target_link_libraries(RemoteWebcamMultiSrv pthread m)
 	else()
-		target_link_libraries(RemoteWebcamCli pthread m)
-		target_link_libraries(RemoteWebcamMultiSrv pthread m)
+		target_link_libraries(RemoteWebcamCli pthread rt m)
+		target_link_libraries(RemoteWebcamMultiSrv pthread rt m)
 	endif()
 endif()
 
 set_target_properties(RemoteWebcamCli PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/RemoteWebcamCli")
 set_target_properties(RemoteWebcamMultiSrv PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/RemoteWebcamMultiSrv")
+
+# Will only work in Release for MSVC, need to manually remove those lines if needed to build in Debug...
+# https://gitlab.kitware.com/cmake/cmake/-/issues/12566
+if(WIN32 AND ((CMAKE_BUILD_TYPE MATCHES Release) OR MSVC))
+	set_target_properties(RemoteWebcamCli PROPERTIES WIN32_EXECUTABLE TRUE)
+	set_target_properties(RemoteWebcamMultiSrv PROPERTIES WIN32_EXECUTABLE TRUE)
+endif()
